@@ -9,6 +9,7 @@ import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
+import java.util.HashMap;
 import java.util.Map;
 @Service
 public class VictimService {
@@ -20,19 +21,25 @@ public class VictimService {
     @Autowired
     private CrimeVisitService crimeVisitService;
     public Map<String, String> addVictim(String indication, String characterIdString, long crimeVisitId) {
+        Map<String, String> map = new HashMap<>();
         Victim victim = new Victim();
         VictimKey id = new VictimKey();
-        if (indication.isBlank())
-            return Map.of("indicationError", "Indication cannot be blank");
+        if (indication.trim().isEmpty()) {
+            map.put("indicationError", "Indication cannot be blank");
+            return map;
+        }
         long characterId;
         try {
             characterId = Long.parseLong(characterIdString);
         } catch (NumberFormatException e) {
-            return Map.of("idError", "Invalid format of the number!");
+            map.put("idError", "Invalid format of the number!");
+            return map;
         }
         Character character = characterService.getCharacter(characterId);
-        if (character == null)
-            return Map.of("idError", "Character with id=" + characterIdString + " doesn't exist!");
+        if (character == null) {
+            map.put("idError", "Character with id=" + characterIdString + " doesn't exist!");
+            return map;
+        }
         id.setVisitId(crimeVisitId);
         id.setCharacterId(characterId);
         victim.setIndication(indication);
